# my_math

./: .gitignore  CMakeLists.txt  class_mat3.h  helpers.h  input_matrix.txt  main.cpp  output_matrix.txt
src/: class_mat3.cpp  class_mat3.h  helpers.cpp  helpers.h  main.cpp  storage.cpp  storage.hpp
tests/: CMakeLists.txt  test_mat3.cpp  test_matrix.txt  test_multiply.cpp  test_not_equal_operator.cpp  test_read_from_file.cpp  tests.cpp
tests/my_test_not_using/: akeLists.txt  test_equal_operator.cpp
tests/src/: main.cpp
